--- a/style/style.css
+++ b/style/style.css
@@ -1,17 +1,24 @@
+.header {
+	width: 100%;
+  height: 100px;
+  display: block;
+}
+
+.logo-container {
+  width: auto;
+  height: 60%;
+  display: table;
+  float: left;
+  margin: 0 0 0 40px;
+}
+
+.logo-container img {
+  width: 30%;
+}
+
 header {
   background: black; 
   width: 940px;
-}
-
-.logo {
-  width: 30%;
-  float: left;
-}  
-
-.box {
-  position: relative;
-	width: 940px;
-	margin: 0 0 20px; 
 }
 
 body {
