--- a/style/style.css
+++ b/style/style.css
@@ -1,24 +1,37 @@
+*{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
 .header {
 	width: 100%;
-  height: 100px;
+  height: 110px;
   display: block;
 }
 
-.logo-container {
+.inner-header {
   width: auto;
-  height: 60%;
-  display: table;
-  float: left;
+  height: 100%;
+  display: block;
   margin: 0 0 0 40px;
 }
 
-.logo-container img {
-  width: 30%;
+.logo-container {
+ height: 100%;
+ display: table;
+ float: left;
 }
 
-header {
-  background: black; 
-  width: 940px;
+h1 img {
+  width: 32%;
+}
+
+.logo-container h1 {
+  width: 100%;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 body {
