--- a/style/style.css
+++ b/style/style.css
@@ -28,13 +28,6 @@ h1 img {
   width: 78%;
 }
 
-h2 {
-  color: white;
-  font-family: 'Montserrat', sans-serif;
-  text-decoration: none;
-  margin: 15px 0;
-}
-
 .logo-container h1 {
   width: 100%;
   display: table-cell;
@@ -72,17 +65,35 @@ body {
   background: black;
 }  
 
+h2 {
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  text-align: justify;
+  margin: 15px 0;
+}
+
 .image-banner {
   width: 100%;
   opacity: 0.8;
+  margin: 0 0 30px;
 }  
 
-.about {
-  margin: 40px 40px;
+.main h2 {
+  margin: 0 30px 10px 30px;
 }
 
-.about p {
+.main p {
   color: white;
   text-align: justify;
   font-family: 'Montserrat', sans-serif;
+  margin: 0px 30px 20px 30px;
+}
+
+.video {
+  margin: 20px 0;
+}
+
+.map {
+  margin: 20px 0;
 }
