--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,7 @@
   width: 85%;
   height: 100%;
   display: block;
-  margin: 0px auto;
+  margin: 0 auto;
 }
 
 .logo-container {
@@ -59,6 +59,13 @@ h1 img {
   font-family: 'Montserrat', sans-serif;
   font-weight: 120;
   text-transform: uppercase;
+  transition: 0.2s all;
+  cursor: pointer;
+}
+
+.navigation a li:hover {
+  color: #BF0603;
+  transform: scale(1.05);
 }
 
 body {
@@ -261,11 +268,17 @@ footer {
 
 .container-footer {
   height: 100%;
-  padding: 20px;
+  padding: 80px;
+
 }
 
 .logo-footer {
-  width: 20%;
+  width: 18%;
   display: table;
   margin: auto;
+  transition: 0.5s all;
+}
+
+.logo-footer:hover {
+  transform: scale(1.05);
 }
