--- a/style/style.css
+++ b/style/style.css
@@ -96,6 +96,7 @@ main p {
   text-align: justify;
   font-family: 'Montserrat', sans-serif;
   margin: 0px 30px 0 30px;
+  line-height: 1.8;
 }
 
 .about {
@@ -258,6 +259,7 @@ form label, form legend {
   width: 38%;
   float: right;
   margin-top: 70px;
+  
 }
 
 footer {
