--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,10 @@
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .header {
 	width: 100%;
   height: 110px;
@@ -70,7 +74,7 @@ h1 img {
 
 body {
   background: #2C2C34;
-  background-attachment: fixed;
+  background-attachment: fixed; 
 }  
 
 h2 {
