--- a/style/style.css
+++ b/style/style.css
@@ -1,125 +1,106 @@
-*{
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-decoration: none;
-}
-
 html {
   scroll-behavior: smooth;
-}
-
-.header {
-	width: 100%;
-  height: 110px;
-  display: block;
-}
-
-.inner-header {
-  width: 85%;
-  height: 100%;
-  display: block;
-  margin: 0 auto;
-}
-
-.logo-container {
- height: 100%;
- display: table;
- float: left;
-}
-
-.logo-container .logo {
-  width: 78%;
-  display: table-cell;
-  vertical-align: middle;
-  margin: 8px auto;
-}
-
-.navigation {
-  float: right;
-  height: 100%;
-}
-
-.navigation li {
-  height: 100%;
-  display: table;
-  float: left;
-  padding: 0px 20px;
-}
-
-.navigation a:last-child {
-  padding-right: 0;
-}
-
-.navigation li a {
-  display: table-cell;
-  vertical-align: middle;
-  height: 100%;
-  color: white;
-  font-size: 1.1em;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 120;
-  text-transform: uppercase;
-  transition: 0.2s all;
-  cursor: pointer;
-}
-
-.navigation li a:hover {
-  color: #BF0603;
-  transform: scale(1.05);
 }
 
 body {
   background: #2C2C34;
   background-attachment: fixed; 
+}
+
+.header {
+  background-color: #2C2C34;
+  margin: 10px 0;
+}
+
+.header-container {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-nav {
+ display: flex;
+}
+
+.heander-nav-link {
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  font-size: 1.25em;
+  font-weight: 100;
+  text-transform: uppercase;
+  margin-left: 25px;
+}
+
+.heander-nav-link:hover {
+  color: #BF0603;
+  transform: scale(1.05);
 }  
+
+.image-banner {
+  width: 100%;
+  height: auto;
+  opacity: 0.8;
+  box-shadow: 0 3px 5px rgba(24, 22, 22, 0.534);
+} 
 
 h2 {
   color: #F4F3EE;
   font-family: 'Montserrat', sans-serif;
   text-decoration: none;
+  font-size: 2em;
   text-align: justify;
-  font-weight: 300; 
-}
+  font-weight: 300;
+  margin-bottom: 30px; 
+} 
 
-.image-banner {
-  width: 100%;
-  opacity: 0.8;
-  box-shadow: 0 3px 5px rgba(24, 22, 22, 0.534);
-}  
-
-main h2 {
-  margin: 0 0 15px 30px;
-}
-
-main p {
+p {
   color: #F4F3EE;
   text-align: justify;
   font-family: 'Montserrat', sans-serif;
-  margin: 0px 30px 0 30px;
   line-height: 1.8;
+  font-size: 1.1em;
+  font-weight: 200;
 }
 
-.about {
-  width: 940px;
-  margin: 150px auto;
+.container .information {
+  width: 80%;
+  margin: 12% auto;
+}
+
+.container .contact {
+  width: 80%;
+  margin: 12% auto 5%;
 }
 
 .video {
-  margin: 20px 0;
   box-shadow: 0 3px 5px rgba(24, 22, 22, 0.534);
 }
 
-.services {
-  width: 940px;
-  margin: 150px auto;
+.cuts-container {
+  display: flex;
+  flex-direction: column;
 }
 
-.hair-container {
+.photo-container {
   position: relative;
 }
 
-.text-hair {
+.photo {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  filter: grayscale(100%);
+  transition: .2s ease-in-out;
+}
+
+.photo:hover {
+  filter: grayscale(0%);
+}
+
+.text {
   font-family: 'Montserrat' sans-serif;
   font-size: 1.5em;
   font-weight: 100;
@@ -128,99 +109,27 @@ main p {
   left: 20px;
   background-color: rgba(0, 0, 0, 0.493);
   color: white;
-  padding: 10px 0;
-}
-
-.haircut-photo {
-  display: block;
-  margin: auto;
-  width: 100%;
-  filter: grayscale(100%);
-  transition: .2s ease-in-out;
-}
-
-.haircut-photo:hover {
-  filter: grayscale(0%);
-}
-
-.beard-container {
-  position: relative;
-}
-
-.text-beard {
-  font-family: 'Montserrat' sans-serif;
-  font-size: 1.5em;
-  font-weight: 100;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  background-color: rgba(0, 0, 0, 0.493);
-  color: white;
-  padding: 10px 0;
-}
-
-.beardtrim-photo {
-  display: block;
-  margin: auto;
-  width: 100%;
-  filter: grayscale(100%);
-  transition: .2s ease-in-out;
-}
-
-.full-container {
-  position: relative;
-}
-
-.text-full {
-  font-family: 'Montserrat' sans-serif;
-  font-size: 1.5em;
-  font-weight: 100;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  background-color: rgba(0, 0, 0, 0.493);
-  color: white;
-  padding: 10px 0;
-}
-
-.beardtrim-photo:hover {
-  filter: grayscale(0%);
-}
-
-.fullpack-photo {
-  display: block;
-  margin: auto;
-  width: 100%;
-  filter: grayscale(100%);
-  transition: .2s ease-in-out;
-  box-shadow: 0 3px 5px rgba(24, 22, 22, 0.534);
-}
-
-.fullpack-photo:hover {
-  filter: grayscale(0%);
-}
-
-.location {
-  width: 940px;
-  margin: 150px auto;
+  padding: 1px 10px;
+  border-radius: 15px;
 }
 
 .map {
   box-shadow: 0 3px 5px rgba(24, 22, 22, 0.534);
 }
 
-.contact {
-  width: 940px;
-  margin: 150px auto 50px auto;
+.container .form-container {
+  width: 80%;
+  margin: 0 auto;
 }
 
-.main-contact {
-  width: 940px;
-	margin: 0px auto 150px auto;
+.form-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-form {
-  margin: 0px 30px;
+.contact-form {
+  width: 70%;
 }
 
 form label, form legend {
@@ -235,12 +144,12 @@ form label, form legend {
 	display: block;
 	margin: 0 0 20px;
 	padding: 12px 8px;
-	width: 50%;
+	width: 80%;
 }
 
 .send {
   font-family: 'Montserrat';
-	width: 20%;
+	width: 30%;
 	padding: 10px 0;
 	background:#BCB8B1;
 	color: white;
@@ -256,13 +165,6 @@ form label, form legend {
 	transform: scale(1.009);
 }
 
-.barber-pole {
-  width: 38%;
-  float: right;
-  margin-top: 70px;
-  
-}
-
 footer {
   background-image: linear-gradient(to bottom, #2C2C34, #494850);
   width: 100%;
@@ -272,7 +174,6 @@ footer {
 .container-footer {
   height: 100%;
   padding: 80px;
-
 }
 
 .logo-footer {
@@ -284,4 +185,54 @@ footer {
 
 .logo-footer:hover {
   transform: scale(1.05);
+}
+
+/* mobile */
+
+@media(max-width: 768px) {
+  .header-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header-nav {
+    flex-direction: column;
+  }
+
+  .logo-container {
+    margin: 20px auto
+  }
+
+  .heander-nav-link {
+    text-align: center;
+    margin: 15px 0;
+  }
+
+  h2 {
+   text-align: center;
+  } 
+
+  p {
+    line-height: 1.6;
+    text-align: center;
+  }
+
+  .text {
+    font-size: 0.9em;
+  }
+
+  .container .form-container {
+    flex-direction: column;
+    width: 80%;
+    margin-top: 50px;
+  }
+
+  .form-container .contact-form {
+    width: 100%;
+  }
+
+  .standard-input {
+    width: 100%;
+  }  
+
 }
